# OrderBookSimulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  bars.txt  build.sh  build2.sh  build_output.txt  log.txt  test.sh  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  main.cc
configured/: CMakeLists.txt  config.hpp  config.hpp.in
data/: alpaca_sample.json  alpaca_sample2.json  saveData.py
docs/: Doxyfile
src/: CMakeLists.txt  common.cc  commonOrderBook.cc  dequeOrderBook.cc  intrusiveOrderBook.cc  my_lib.cc  my_lib.h  orderBook.cc  orderBook.h  orderGenerator.cc  pmrBook.cc
src/alpacaFeed/: CMakeLists.txt  readJson.cc  readJson.h
src/barGeneration/: CMakeLists.txt  alpaca_data.jsonl  app.cc  barAsParquet.hpp  bars.parquet  bars.txt  commons.hpp  configBars.h  networking.hpp  orderBookTrack.hpp  testBoost.cc
src/simulation/: CMakeLists.txt  common.cc  common.h  dequeOrderBook.cc  derivedBooks.h  intrusiveOrderBook.cc  orderBook.h  orderBookTemplate.h  pmrBook.cc  pmrPool.cc
src/testBoost/: CMakeLists.txt  barGeneration.hpp  orderBookTrack.hpp  root_certificates.hpp  testBoost.cc
